--- a/templates/blankets.html
+++ b/templates/blankets.html
@@ -80,13 +80,25 @@ https://raheem.com/tm-546-raheementerprises-clothing
     <br><br><br><br><h1 class="text-center">Our Blankets Dashboard</h1>
 
 <div class="row">
-    <div class="col-3">
+    <div class="col-3 mt-5">
 {#        Woolen#}
         <br><br><h4 class="text-center">Woolen Blankets</h4>
         <div>
-            <img height="280" width="280" src="../static/images/clothings/blankets/woolen/Cotton-Woven-Blanket-by-Vellux.jpg" alt="">
-            <img height="280" src="../static/images/clothings/blankets/woolen/download.jpeg" alt="">
-            <img height="280" src="../static/images/clothings/blankets/woolen/groff-personal-sensory-100-cotton-blanket.jpg" alt="">
+            <div>
+                <img height="280" width="280" src="../static/images/clothings/blankets/woolen/Cotton-Woven-Blanket-by-Vellux.jpg" alt="">
+                <p>KES 2000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img height="280" src="../static/images/clothings/blankets/woolen/download.jpeg" alt="">
+                <p>KES 2000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img height="280" src="../static/images/clothings/blankets/woolen/groff-personal-sensory-100-cotton-blanket.jpg" alt="">
+                <p>KES 2000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
     </div>
 
@@ -94,9 +106,21 @@ https://raheem.com/tm-546-raheementerprises-clothing
 {#        Cotton#}
         <br><br><h4 class="text-center">Cotton Blankets</h4>
         <div style="width: 80%">
-            <img height="280" width="250" src="../static/images/clothings/blankets/cotton/51rF+pLSzeL._SY450_.jpg" alt="">
-            <img height="280" width="250" src="../static/images/clothings/blankets/cotton/duvet-thumb.jpg" alt="">
-            <img height="280" width="250" src="../static/images/clothings/blankets/cotton/microfiber-blankets-004.jpg" alt="">
+            <div>
+                <img height="280" width="250" src="../static/images/clothings/blankets/cotton/51rF+pLSzeL._SY450_.jpg" alt="">
+                <p>KES 1700</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img height="280" width="250" src="../static/images/clothings/blankets/cotton/duvet-thumb.jpg" alt="">
+                <p>KES 1700</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img height="280" width="250" src="../static/images/clothings/blankets/cotton/microfiber-blankets-004.jpg" alt="">
+                <p>KES 1700</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
     </div>
 
@@ -104,22 +128,46 @@ https://raheem.com/tm-546-raheementerprises-clothing
 {#        Soft#}
         <br><br><h4 class="text-center">Soft Blankets</h4>
         <div>
-            <img height="280" width="250" src="../static/images/clothings/blankets/soft/images.jpeg" alt="">
-            <img height="280" width="250" src="../static/images/clothings/blankets/soft/61rAYAYOsAL._AC_SL1000_.jpg" alt="">
-            <img height="280" width="250" src="../static/images/clothings/blankets/soft/41xXKEnWLoL.jpg" alt="">
+            <div>
+                <img height="280" width="250" src="../static/images/clothings/blankets/soft/images.jpeg" alt="">
+                <p>KES 2300</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img height="280" width="250" src="../static/images/clothings/blankets/soft/61rAYAYOsAL._AC_SL1000_.jpg" alt="">
+                <p>KES 2300</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img height="280" width="250" src="../static/images/clothings/blankets/soft/41xXKEnWLoL.jpg" alt="">
+                <p>KES 2300</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
     </div>
 
-    <div class="col-3">
+    <div class="col-3 mt-5">
 {#        Handmade#}
         <br><br><h4 class="text-center">Handmade Blankets</h4>
         <div>
-            <img height="280" width="250" src="../static/images/clothings/blankets/handmade/81BiPAM0wbL._AC_SX466_.jpg" alt="">
-            <img height="280" width="250" src="../static/images/clothings/blankets/handmade/81FgZt+kVAL._AC_SL1500_.jpg" alt="">
-            <img height="280" width="250" src="../static/images/clothings/blankets/handmade/91FDh7-I-aL._AC_SX450_.jpg" alt="">
+            <div>
+                <img height="280" width="250" src="../static/images/clothings/blankets/handmade/81BiPAM0wbL._AC_SX466_.jpg" alt="">
+                <p>KES 2300</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img height="280" width="250" src="../static/images/clothings/blankets/handmade/81FgZt+kVAL._AC_SL1500_.jpg" alt="">
+                <p>KES 2300</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img height="280" width="250" src="../static/images/clothings/blankets/handmade/91FDh7-I-aL._AC_SX450_.jpg" alt="">
+                <p>KES 2300</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
     </div>
-           <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em class="text-danger">Dashboard</em></button></h2></a>
+        <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em class="text-danger">Dashboard</em></button></h2></a>
         <a class="navbar-brand btn-block  text-center" href="/clothings"><h2><button>Clothings<em class="text-danger">Dashboard</em></button></h2></a>
         <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
 
