--- a/templates/dresses.html
+++ b/templates/dresses.html
@@ -80,31 +80,75 @@ https://templatemo.com/tm-546-raheem-enterprises
     <br><br><br><br><h1 class="text-center">DRESSES <em class="text-danger">DASHBOARD</em></h1>
     <div class="row">
         <div class="col-3">
-            <img src="../static/images/clothings/dresses/images.jpeg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/dresses/18455033_img-20210322-wa0042_1063x1250.jpg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/dresses/7-1_2048x.jpeg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/dresses/31HwB+y+J-L._SL500_.jpg" height="300" width="280" alt="">
+            <div>
+                <img src="../static/images/clothings/dresses/images.jpeg" height="300" width="280" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/dresses/18455033_img-20210322-wa0042_1063x1250.jpg" height="300" width="280" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/dresses/7-1_2048x.jpeg" height="300" width="280" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
         <div class="col-3">
-            <img src="../static/images/clothings/dresses/bodycon-collection-sophia-bandage-mini-dress-classic-black-womens-dresses-and-apparel-online-15169690763343_800x.jpg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/dresses/dress-silo-sliderpng.png" height="300" width="400" alt="">
-            <img src="../static/images/clothings/dresses/619b0c81c3dd8c2316f957c903331f01.jpg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/dresses/61hYNSzMuoL._AC_UL1001_.jpg" height="300" width="280" alt="">
+            <div>
+                <img src="../static/images/clothings/dresses/bodycon-collection-sophia-bandage-mini-dress-classic-black-womens-dresses-and-apparel-online-15169690763343_800x.jpg" height="300" width="280" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/dresses/dress-silo-sliderpng.png" height="300" width="400" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/dresses/619b0c81c3dd8c2316f957c903331f01.jpg" height="300" width="280" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
         <div class="col-3">
-            <img src="../static/images/clothings/dresses/images%20(1).jpeg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/dresses/w2000_q80.jpg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/dresses/shelly_large.png" height="300" width="280" alt="">
-            <img src="../static/images/clothings/dresses/e34fe78d2d1137f4a5157ffc36a6f45a.jpg" height="300" width="280" alt="">
+            <div>
+                <img src="../static/images/clothings/dresses/images%20(1).jpeg" height="300" width="280" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/dresses/w2000_q80.jpg" height="300" width="280" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/dresses/shelly_large.png" height="300" width="280" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
         <div class="col-3">
-            <img src="../static/images/clothings/dresses/images%20(2).jpeg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/dresses/images%20(3).jpeg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/dresses/images%20(4).jpeg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/dresses/images%20(5).jpeg" height="300" width="280" alt="">
+            <div>
+                <img src="../static/images/clothings/dresses/images%20(2).jpeg" height="300" width="280" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/dresses/images%20(3).jpeg" height="300" width="280" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/dresses/images%20(4).jpeg" height="300" width="280" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
         <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em class="text-danger">Dashboard</em></button></h2></a>
         <a class="navbar-brand btn-block  text-center" href="/clothings"><h2><button>Clothings<em class="text-danger">Dashboard</em></button></h2></a>
