--- a/templates/hoodies.html
+++ b/templates/hoodies.html
@@ -87,36 +87,84 @@ https://raheem.com/tm-546-raheem-enterprises
       <div class="col-3">
       <br><br><h4>Super Nike</h4>
          <div>
-             <img height="250" width="200" src="../static/images/clothings/hoodies/nike/41aPh2-DdgL.jpg" alt="">
-             <img height="250" width="200" src="../static/images/clothings/hoodies/nike/d25d3d_2d9dba618dbd49588fee440df7c95fa3_mv2.jpg" alt="">
-             <img height="250" width="200" src="../static/images/clothings/hoodies/nike/nike-hoodie.png" alt="">
+             <div>
+                <img height="250" width="200" src="../static/images/clothings/hoodies/nike/41aPh2-DdgL.jpg" alt="">
+                <p>KES 2500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+             </div>
+             <div>
+                 <img height="250" width="200" src="../static/images/clothings/hoodies/nike/d25d3d_2d9dba618dbd49588fee440df7c95fa3_mv2.jpg" alt="">
+                 <p>KES 2500</p>
+                 <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+             </div>
+             <div>
+                 <img height="250" width="200" src="../static/images/clothings/hoodies/nike/nike-hoodie.png" alt="">
+                 <p>KES 2500</p>
+                 <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+             </div>
          </div>
       </div>
 {#          vans#}
-      <div class="col-3">
+      <div class="col-3 mt-5">
           <br><br><h4>Vans</h4>
           <div>
-              <img src="../static/images/clothings/hoodies/vans/images.jpeg" alt="">
-              <img src="../static/images/clothings/hoodies/vans/vans-Black-Zodiac-Printed-Hoodie.jpeg" alt="">
-              <img height="300" src="../static/images/clothings/hoodies/vans/9929730__1125x1500%20(1).jpg" alt="">
+              <div>
+                <img src="../static/images/clothings/hoodies/vans/images.jpeg" alt="">
+                <p>KES 2500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+              </div>
+              <div>
+                  <img src="../static/images/clothings/hoodies/vans/vans-Black-Zodiac-Printed-Hoodie.jpeg" alt="">
+                  <p>KES 2500</p>
+                  <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+              </div>
+              <div>
+                  <img height="300" src="../static/images/clothings/hoodies/vans/9929730__1125x1500%20(1).jpg" alt="">
+                  <p>KES 2500</p>
+                 <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+              </div>
           </div>
       </div>
 {#      Adidas#}
-      <div class="col-3">
+      <div class="col-3 mt-5">
           <br><br><h4>Adidas Classic</h4>
           <div>
-              <img height="250" src="../static/images/clothings/hoodies/adidas/31j4tI1cLlL.jpg" alt="">
-              <img height="250" src="../static/images/clothings/hoodies/adidas/0103944_trefoil-hoodie_550.jpeg" alt="">
-              <img src="../static/images/clothings/hoodies/adidas/s-l300.jpg" alt="">
+              <div>
+                  <img height="250" src="../static/images/clothings/hoodies/adidas/31j4tI1cLlL.jpg" alt="">
+                  <p>KES 2500</p>
+                  <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+              </div>
+              <div>
+                  <img height="250" src="../static/images/clothings/hoodies/adidas/0103944_trefoil-hoodie_550.jpeg" alt="">
+                  <p>KES 2500</p>
+                  <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+              </div>
+              <div>
+                  <img src="../static/images/clothings/hoodies/adidas/s-l300.jpg" alt="">
+                  <p>KES 2500</p>
+                  <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+              </div>
           </div>
       </div>
 {#      Louis Voitton#}
       <div class="col-3">
           <br><br><h4>Louis Voitton</h4>
           <div>
-              <img height="250" width="270" src="../static/images/clothings/hoodies/vl/s-l400.jpg" alt="">
-              <img height="250" width="270" src="../static/images/clothings/hoodies/vl/13297939_photogrid-plus-1602582833977_1024x1280.jpg" alt="">
-              <img height="250" src="../static/images/clothings/hoodies/vl/m_60527cf8691412a114a475b5.jpg" alt="">
+              <div>
+                  <img height="250" width="270" src="../static/images/clothings/hoodies/vl/s-l400.jpg" alt="">
+                  <p>KES 2500</p>
+                  <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+              </div>
+              <div>
+                  <img height="250" width="270" src="../static/images/clothings/hoodies/vl/13297939_photogrid-plus-1602582833977_1024x1280.jpg" alt="">
+                  <p>KES 2500</p>
+                  <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+              </div>
+              <div>
+                  <img height="250" src="../static/images/clothings/hoodies/vl/m_60527cf8691412a114a475b5.jpg" alt="">
+                  <p>KES 2500</p>
+                  <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+              </div>
           </div>
       </div>
         <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em class="text-danger">Dashboard</em></button></h2></a>
