--- a/templates/index.html
+++ b/templates/index.html
@@ -165,7 +165,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <a href="#"><img src="../static/images/images%20(1).jpeg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Woolen Blankets</h4></a>
-                <h6>KES 4000</h6>
+                <h6>KES 2000</h6>
                 <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
@@ -182,7 +182,7 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="product-item">
               <a href="#"><img src="../static/images/1.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Woolen Sweaters</h4></a>
+                <a href="#"><h4>Pull Necks</h4></a>
                 <h6>KES 2500</h6>
                 <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                 <ul class="stars">
