--- a/templates/marvins.html
+++ b/templates/marvins.html
@@ -77,31 +77,79 @@ https://templatemo.com/tm-546-sixteen-clothing
       </nav>
     </header>
 
-    <br><br><br><br><h2 class="text-center">Marvins Dashboard</h2>
+    <br><br><br><br><h2 class="text-center">Marvins <em class="text-danger">Dashboard</em></h2>
 
     <div class="row">
         <div class="col-4">
             <br><br><h3 class="text-center">Designer</h3>
-            <img src="../static/images/clothings/marvins/designer/download.jpeg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/marvins/designer/13691605_photogrid-1603430000259_1024x1365.jpg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/marvins/designer/14491165_photogrid-1605530893952_1024x1024.jpg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/marvins/designer/16452876_img-20210119-162512-699_1024x1024.jpg" height="300" width="280" alt="">
+            <div>
+                <img src="../static/images/clothings/marvins/designer/download.jpeg" height="300" width="280" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/marvins/designer/13691605_photogrid-1603430000259_1024x1365.jpg" height="300" width="280" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/marvins/designer/14491165_photogrid-1605530893952_1024x1024.jpg" height="300" width="280" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/marvins/designer/16452876_img-20210119-162512-699_1024x1024.jpg" height="300" width="280" alt="">
+                <p>KES 1500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
-        <div class="col-4">
+        <div class="col-4 mt-5">
             <br><br><h3 class="text-center">Kings Collection</h3>
-            <img src="../static/images/clothings/marvins/king/428-ashgrey-2666.jpg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/marvins/king/428-maroon-2669.jpg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/marvins/king/pb-26-3121.jpg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/marvins/king/1%20(1).jpg" height="300" width="280" alt="">
+            <div>
+                <img src="../static/images/clothings/marvins/king/428-ashgrey-2666.jpg" height="300" width="280" alt="">
+                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/marvins/king/428-maroon-2669.jpg" height="300" width="280" alt="">
+                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/marvins/king/pb-26-3121.jpg" height="300" width="280" alt="">
+                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/marvins/king/1%20(1).jpg" height="300" width="280" alt="">
+                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
         <div class="col-4">
             <br><br><h4 class="text-center">Fuzzy Knits</h4>
-            <img src="../static/images/clothings/marvins/knits/download%20(1).jpeg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/marvins/knits/m_6092db95463d4f4f34299a11.jpg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/marvins/knits/b732904f972db24275ec16d3b4abc2b8.png" height="300" width="280" alt="">
-            <img src="../static/images/clothings/marvins/knits/images.jpeg" height="300" width="280" alt="">
+            <div>
+                <img src="../static/images/clothings/marvins/knits/download%20(1).jpeg" height="300" width="280" alt="">
+                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/marvins/knits/m_6092db95463d4f4f34299a11.jpg" height="300" width="280" alt="">
+                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/marvins/knits/b732904f972db24275ec16d3b4abc2b8.png" height="300" width="280" alt="">
+                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/marvins/knits/images.jpeg" height="300" width="280" alt="">
+                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
         <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em class="text-danger">Dashboard</em></button></h2></a>
         <a class="navbar-brand btn-block  text-center" href="/clothings"><h2><button>Clothings<em class="text-danger">Dashboard</em></button></h2></a>
