--- a/templates/pull_necks.html
+++ b/templates/pull_necks.html
@@ -84,18 +84,38 @@ https://templatemo.com/tm-546-sixteen-clothing
             <br><br><h4 class="text-center">Polo Pull Necks</h4>
             <div>
                 <img height="300" width="280" src="../static/images/clothings/pullnecks/polo/images.jpeg" alt="">
+                <p>KES 1250</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
                 <img height="300" width="280" src="../static/images/clothings/pullnecks/polo/11015246_img-20200730-wa0114_864x1152.jpg" alt="">
+                <p>KES 1250</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
                 <img height="300" width="280" src="../static/images/clothings/pullnecks/polo/burgundy-knitted-longsleeve-polo-neck-jumper-on-mannequin-isolated-on-a-white-background-2FN1X81.jpg" alt="">
+                <p>KES 1250</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
             </div>
         </div>
 
-        <div class="col-4">
+        <div class="col-4 mt-5">
 {#            Knit Necks#}
             <br><br><h4 class="text-center">Knit Pull Necks</h4>
             <div>
                 <img src="../static/images/clothings/pullnecks/knit/images.jpeg" height="300" width="280" alt="">
+                <p>KES 1250</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
                 <img src="../static/images/clothings/pullnecks/knit/12f1023ae7e3875629b81e302b6334810a445c76.jpg" height="300" width="280" alt="">
+                <p>KES 1250</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
                 <img src="../static/images/clothings/pullnecks/knit/Charter-Club-Women's-Zipper-Fold-Over-Collar-Sweater.jpg" height="300" width="280" alt="">
+                <p>KES 1250</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
             </div>
         </div>
 
@@ -104,8 +124,18 @@ https://templatemo.com/tm-546-sixteen-clothing
             <br><br><h4 class="text-center">Elastic Pull Necks</h4>
             <div>
                 <img src="../static/images/clothings/pullnecks/elastic/images.jpeg" height="300" width="280" alt="">
+                <p>KES 1250</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
                 <img src="../static/images/clothings/pullnecks/elastic/1.jpg" height="300" width="280" alt="">
+                <p>KES 1250</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
                 <img src="../static/images/clothings/pullnecks/elastic/1%20(1).jpg" height="300" width="280" alt="">
+                <p>KES 1250</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
             </div>
         </div>
                <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em class="text-danger">Dashboard</em></button></h2></a>
