--- a/templates/scarves.html
+++ b/templates/scarves.html
@@ -84,27 +84,57 @@ https://templatemo.com/tm-546-raheem-enterprises
           <br><br><h3>Versace</h3>
           <div>
               <img src="../static/images/clothings/scarves/versace/versace-Salmon-pink-Square-Scarf.jpeg" alt="">
+              <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
+          <div>
               <img height="300" src="../static/images/clothings/scarves/versace/versace-scarves-baroque-print-silk-scarf-00000125062f00s001.jpg" alt="">
+              <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
+          <div>
               <img height="300" src="../static/images/clothings/scarves/versace/versace-BlackGold-Baroque-Detail-Silk-Scarf-blackgold-Scarves.jpeg" alt="">
+              <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
           </div>
       </div>
 {#      Vans#}
-      <div class="col-3">
+      <div class="col-3 mt-5">
           <br><br><h3>Vans</h3>
           <div>
               <img height="250" width="250" src="../static/images/clothings/scarves/vans/s-l300.jpg" alt="">
-          <img height="300" width="250" src="../static/images/clothings/scarves/vans/818QpyaFLaL._AC_UL1400_.jpg" alt="">
-          <img height="300" src="../static/images/clothings/scarves/vans/dries-van-noten-khaki-silk-scarves.jpg" alt="">
+              <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
+          <div>
+              <img height="300" width="250" src="../static/images/clothings/scarves/vans/818QpyaFLaL._AC_UL1400_.jpg" alt="">
+              <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
+          <div>
+              <img height="300" src="../static/images/clothings/scarves/vans/dries-van-noten-khaki-silk-scarves.jpg" alt="">
+              <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
           </div>
 
       </div>
 {#      Louis Voitton#}
-      <div class="col-3">
+      <div class="col-3 mt-5">
           <br><br><h3>Louis Voitton</h3>
           <div>
               <img height="300" src="../static/images/clothings/scarves/vl/louis-vuitton-brown-monogram-shine-shawl-scarfwrap-0-1-650-650.jpg" alt="">
+              <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
+          <div>
               <img height="300" src="../static/images/clothings/scarves/vl/louis-vuitton-lv-crafty-bi-color-shawl-scarves-and-shawls--M76487_PM2_Front%20view.jpg" alt="">
+              <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
+         <div>
               <img height="250" src="../static/images/clothings/scarves/vl/louis-vuitton--Wool-blend-Logomania-Scarf.jpeg" alt="">
+              <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
           </div>
       </div>
 {#      Adidas#}
@@ -112,8 +142,18 @@ https://templatemo.com/tm-546-raheem-enterprises
           <br><br><h3>Adidas Classic</h3>
           <div>
               <img height="300" src="../static/images/clothings/scarves/adidas/A1azmfU3-WL._AC_UL320_.jpg" alt="">
+              <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
+          <div>
               <img src="../static/images/clothings/scarves/adidas/external-large.jpg" alt="">
+              <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
+          <div>
               <img height="300" src="../static/images/clothings/scarves/adidas/d773b0b13746118bc730899ff35204320348851d.medium.jpg" alt="">
+              <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
           </div>
       </div>
         <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em class="text-danger">Dashboard</em></button></h2></a>
