--- a/templates/skirts.html
+++ b/templates/skirts.html
@@ -76,27 +76,75 @@ https://templatemo.com/tm-546-raheem-enterprises
         </div>
       </nav>
     </header>
-    <br><br><br><br><h2 class="text-center">Skirts Dashboard</h2>
+    <br><br><br><br><h2 class="text-center">Skirts <em class="text-danger">Dashboard</em></h2>
     <div class="row">
         <div class="col-3">
-            <img src="../static/images/clothings/skirts/images.jpeg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/skirts/download.jpeg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/skirts/1.jpg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/skirts/2147759_img-20190806-wa0031_638x509.jpg" height="300" width="280" alt="">
+            <div>
+                <img src="../static/images/clothings/skirts/images.jpeg" height="300" width="280" alt="">
+                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/skirts/download.jpeg" height="300" width="280" alt="">
+                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/skirts/1.jpg" height="300" width="280" alt="">
+                 <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/skirts/2147759_img-20190806-wa0031_638x509.jpg" height="300" width="280" alt="">
+                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+        </div>
+
+        <div class="col-4 mt-5">
+            <div>
+                <img src="../static/images/clothings/skirts/c7da7ef6f9e8356732df54da681c82784f6f64e4_original.jpeg" height="300" width="280" alt="">
+                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/skirts/Red-Skirt-.jpg" alt="" height="300" width="280">
+                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/skirts/35434730qu_23_a.jpg" alt="" height="300" width="280">
+                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/skirts/only-black-denim-skirt-blush_z-1613755-G.jpg" alt="" height="300" width="280">
+                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
         <div class="col-4">
-            <img src="../static/images/clothings/skirts/c7da7ef6f9e8356732df54da681c82784f6f64e4_original.jpeg" height="300" width="280" alt="">
-            <img src="../static/images/clothings/skirts/Red-Skirt-.jpg" alt="" height="300" width="280">
-            <img src="../static/images/clothings/skirts/35434730qu_23_a.jpg" alt="" height="300" width="280">
-            <img src="../static/images/clothings/skirts/only-black-denim-skirt-blush_z-1613755-G.jpg" alt="" height="300" width="280">
-        </div>
-
-        <div class="col-4">
-            <img src="../static/images/clothings/skirts/image.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/clothings/skirts/WB4315-BLACK-1_1024x1024.jpg" height="300" width="300" alt="">
-            <img src="../static/images/clothings/skirts/images%20(1).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/clothings/skirts/images%20(2).jpeg" height="300" width="300" alt="">
+            <div>
+                <img src="../static/images/clothings/skirts/image.jpeg" height="300" width="300" alt="">
+                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/skirts/WB4315-BLACK-1_1024x1024.jpg" height="300" width="300" alt="">
+                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/skirts/images%20(1).jpeg" height="300" width="300" alt="">
+                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/clothings/skirts/images%20(2).jpeg" height="300" width="300" alt="">
+                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
         <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em class="text-danger">Dashboard</em></button></h2></a>
