--- a/templates/trousers.html
+++ b/templates/trousers.html
@@ -60,7 +60,6 @@ https://templatemo.com/tm-546-raheem-enterprises
                       Products
                     </a>
                 </li>
-              </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -85,31 +84,95 @@ https://templatemo.com/tm-546-raheem-enterprises
     <br><br><br><br><h1 class="text-center">TROUSERS <em class="text-danger">DASHBOARD</em></h1>
 <div class="row">
     <div class="col-3">
-        <img src="../static/images/clothings/trousers/1550610923-carhartt-1550610904.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/trousers/1d6692e1ac46263c702003b360f52e6f02e9ff61.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/trousers/13960498_photogrid-plus-1604150320086_1024x1024.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/trousers/images.jpeg" height="300" width="280" alt="">
+        <div>
+            <img src="../static/images/clothings/trousers/1550610923-carhartt-1550610904.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/trousers/1d6692e1ac46263c702003b360f52e6f02e9ff61.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/trousers/13960498_photogrid-plus-1604150320086_1024x1024.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/trousers/images.jpeg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
     </div>
 
     <div class="col-3">
-        <img src="../static/images/clothings/trousers/images%20(1).jpeg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/trousers/422200393_1.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/trousers/05920P05.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/trousers/61tYrL1dVCL._AC_UX342_.jpg" height="300" width="280" alt="">
+        <div>
+            <img src="../static/images/clothings/trousers/images%20(1).jpeg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/trousers/422200393_1.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/trousers/05920P05.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/trousers/61tYrL1dVCL._AC_UX342_.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
     </div>
 
     <div class="col-3">
-        <img src="../static/images/clothings/trousers/images%20(2).jpeg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/trousers/men-s-work-trousers-1-1541155271.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/trousers/low-classic-layered-wide-leg-trousers_16067707_32709867_400.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/trousers/istockphoto-866103730-612x612.jpg" height="300" width="280" alt="">
+        <div>
+            <img src="../static/images/clothings/trousers/images%20(2).jpeg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/trousers/men-s-work-trousers-1-1541155271.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/trousers/low-classic-layered-wide-leg-trousers_16067707_32709867_400.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/trousers/istockphoto-866103730-612x612.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
     </div>
     
     <div class="col-3">
-        <img src="../static/images/clothings/trousers/helikon-woodsman-trousers-taiga-green-black-%5B9%5D-57259-p.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/trousers/images%20(3).jpeg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/trousers/www.ilgufo.com--P21PL030C3124_110-01.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/trousers/Taylor-Stitch-The-Camp-Pant.jpg" height="300" width="280" alt="">
+        <div>
+            <img src="../static/images/clothings/trousers/helikon-woodsman-trousers-taiga-green-black-%5B9%5D-57259-p.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/trousers/images%20(3).jpeg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/trousers/www.ilgufo.com--P21PL030C3124_110-01.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/trousers/Taylor-Stitch-The-Camp-Pant.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
     </div>
         <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em class="text-danger">Dashboard</em></button></h2></a>
         <a class="navbar-brand btn-block  text-center" href="/clothings"><h2><button>Clothings<em class="text-danger">Dashboard</em></button></h2></a>
