--- a/templates/tshirts.html
+++ b/templates/tshirts.html
@@ -81,31 +81,96 @@ https://templatemo.com/tm-546-raheem-enterprises
 
 <div class="row">
     <div class="col-3">
-        <img src="../static/images/clothings/shirts/6317d553f7a5fb0b4ec774437620634394704dfa.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/shirts/22270c2343fb0436f4e30f9e2532598c.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/shirts/wmfzhgA.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/shirts/13273721_img-20201012-wa0046_963x1280.jpg" height="300" width="280" alt="">
+        <div>
+            <img src="../static/images/clothings/shirts/6317d553f7a5fb0b4ec774437620634394704dfa.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/shirts/22270c2343fb0436f4e30f9e2532598c.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/shirts/wmfzhgA.jpg" height="300" width="280" alt="">
+            <p>KES 2500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/shirts/13273721_img-20201012-wa0046_963x1280.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+
+        </div>
     </div>
 
     <div class="col-3">
-        <img src="../static/images/clothings/shirts/15499965_cbbb92d0-72e7-4a1d-bf5c-c12e6d387c29_1200x1600.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/shirts/classic-mens-shirts-stacked-260nw-540553141.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/shirts/dQ7Ma9A.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/shirts/IMG-20210511-WA0095.jpg" height="300" width="280" alt="">
+        <div>
+            <img src="../static/images/clothings/shirts/15499965_cbbb92d0-72e7-4a1d-bf5c-c12e6d387c29_1200x1600.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/shirts/classic-mens-shirts-stacked-260nw-540553141.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/shirts/dQ7Ma9A.jpg" height="300" width="280" alt="">
+            <p>KES 2500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/shirts/IMG-20210511-WA0095.jpg" height="300" width="280" alt="">
+            <p>KES 1000</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
     </div>
 
     <div class="col-3">
-        <img src="../static/images/clothings/shirts/IMG-20210511-WA0062.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/shirts/H2bd7d12a17e24995aaafe41e60d91f6aq.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/shirts/girl-tops-tees-polo-ralph-lauren.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/shirts/IMG_9190-2.jpg" height="300" width="280" alt="">
+        <div>
+            <img src="../static/images/clothings/shirts/IMG-20210511-WA0062.jpg" height="300" width="280" alt="">
+            <p>KES 1000</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/shirts/H2bd7d12a17e24995aaafe41e60d91f6aq.jpg" height="300" width="280" alt="">
+            <p>KES 1000</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/shirts/girl-tops-tees-polo-ralph-lauren.jpg" height="300" width="280" alt="">
+            <p>KES 1000</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/shirts/IMG_9190-2.jpg" height="300" width="280" alt="">
+            <p>KES 2500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
     </div>
 
     <div class="col-3">
-        <img src="../static/images/clothings/shirts/IMG-20210511-WA0089.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/shirts/IMG-20210511-WA0082.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/shirts/IMG-20210511-WA0087.jpg" height="300" width="280" alt="">
-        <img src="../static/images/clothings/shirts/men-s-classic-shirt-500x500.jpg" height="300" width="280" alt="">
+        <div>
+            <img src="../static/images/clothings/shirts/IMG-20210511-WA0089.jpg" height="300" width="280" alt="">
+            <p>KES 1000</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/shirts/IMG-20210511-WA0082.jpg" height="300" width="280" alt="">
+            <p>KES 1000</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/shirts/IMG-20210511-WA0087.jpg" height="300" width="280" alt="">
+            <p>KES 1000</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/clothings/shirts/men-s-classic-shirt-500x500.jpg" height="300" width="280" alt="">
+            <p>KES 1500</p>
+            <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
     </div>
         <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em class="text-danger">Dashboard</em></button></h2></a>
         <a class="navbar-brand btn-block  text-center" href="/clothings"><h2><button>Clothings<em class="text-danger">Dashboard</em></button></h2></a>
